Many changes to fitting code: - Added 2015 data category - Added Ds2PhiPi decay mode (uses Ds2KKPi nTuples with Phi mass cut) - Added B decay mode category (DsD0 or DsPhi) - Added helicity angle category - Added Ds/Phi BDTcut Bins as categories - Added function RunManyFits() to perform BDT cut optmisation 	- This should produce 1D/2D plots at the end to show optimal point but the plotting doesn't work as it should so function also writes out text files to results/manyfits/text/<Dmode>/<BDTmethod>/<MC/DATA>/. 	- Standalone plotting macro in scripts/plot.c picks up text files and creates nice plots
- Blinding implemented but still need to be verified before being used
	- Blinding only blinds mode DsPhi, changes yields to RooUnblindUniform and puts white box over signal region
- Many new command line arguments added, detailed in src/Parameters.C
- Simple running instructions in commands.txt
- Updated MakeFile to work with ROOT 6

--- a/scripts/Makefile
+++ b/scripts/Makefile
@@ -5,6 +5,7 @@ ROOTCFLAGS   := $(shell $(ROOTSYS)/bin/root-config --cflags)
 ROOTLIBS     := $(shell $(ROOTSYS)/bin/root-config --libs)
 
 CXXFLAGS      = -O -Wall -fPIC -g -W
+CXXFLAGS     += -isystem $(shell $(ROOTSYS)/bin/root-config --incdir)
 CXXFLAGS     += $(ROOTCFLAGS) 
 
 LIBS	      = $(ROOTLIBS) -lTreePlayer -lTMVA -lRooFitCore -lRooFit -lMinuit -lFoam -lXMLIO
@@ -28,8 +29,8 @@ run : $(OBJS) $(BINDIR)EventDict.o
 $(BINDIR)EventDict.o : ${DATAOBJS}
 				@echo "Generating dictionary ..."
 				@rm -f ${SRCDIR}EventDict.C ${SRCDIR}EventDict.h
-				@rootcint ${SRCDIR}EventDict.C -c ${DATAOBJS}
-				${CC} $(CXXFLAGS) -c ${SRCDIR}EventDict.C -o $(BINDIR)EventDict.o
+				@rootcint ${SRCDIR}EventDict.C -c ${DATAOBJS} 
+				${CC} $(CXXFLAGS) -I ${PWD} -c ${SRCDIR}EventDict.C -o $(BINDIR)EventDict.o
 
 $(BINDIR)Main.o : 		$(SRCDIR)Main.C
 				@mkdir -p bin
